<resources>
    <string name="app_name">StockCourt</string>
    <string name="title_activity_trends">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name ="Still_dont_have_an_account_Sign_up_here.">Still don`t have an account?<font fgcolor="#66bd9f"> Sign up here.</font></string>
    <string name= "Forgot_your_password">Forgot your password?</string>
    <string name="I_want_to_receive_short_relevant_financial_information_to_my_email_address.">I want to receive short &amp; relevant financial information to my email address.</string>
    <string name="When_you_Register_you_agree_to_our_Terms_and_Conditions_and_have_read_our_Privacy_Policy.">When you <b>Register</b>, you agree to our <font fgcolor="#66bd9f">Terms &amp; Conditions</font> and have read our <font fgcolor="#66bd9f">Privacy Policy.</font></string>
    <string name="Need_an_invoice_Create_a_business_account.">Need an invoice?<font fgcolor="#66bd9f"> Create a business account.</font></string>
    <string name="BOTTOM_NAV_BAR_FLOATING_BTN">Home Fragment</string>
    <string name="PROFILE">PROFILE</string>
    <string name="PROFILE_NAME">NAME</string>
    <string name="PROFILE_EMAIL">EMAIL</string>
    <string name="PROFILE_PASSWORD">PASSWORD</string>
    <string name="PROFILE_PASSWORD_USER">********</string>
    <string name="PROFILE_ACCOUNT_TYPE">ACCOUNT TYPE</string>
    <string name="PROFILE_EDIT_EDIT">EDIT</string>
    <string name="PROFILE_EDIT_CHANGENAME_BTN">Change name</string>
    <string name="PROFILE_EDIT_CHANGEEMAIL_BTN">Change email</string>
    <string name="PROFILE_EDIT_CHANGEPASS_BTN">Change password</string>
    <string name="PROFILE_EDIT_PACKAGES_BTN">Packages</string>
    <string name="PROFILE_EDIT_DELETEACCOUNT_BTN">Delete account</string>
    <string name="PROFILE_CHANGE_NAME_NAME">NAME</string>
    <string name="PROFILE_CHANGE_NAME_NEW_NAME">New Name</string>
    <string name="PROFILE_CHANGE_PASSWORD_NAME">PASSWORD</string>
    <string name="PROFILE_CHANGE_PASSWORD_NEW_PASS">Current Password</string>
    <string name="PROFILE_CHANGE_PASSWORD_REPEAT_PASS">New Password</string>
    <string name="PROFILE_CHANGE_EMAIL_NAME">EMAIL</string>
    <string name="PROFILE_CHANGE_EMAIL_NEW_EMAIL">New Email</string>
    <string name="ARTICLE_SHARE_BTN">SHARE</string>
    <string name="ARTICLE_COMMENT_REPLY_BTN">REPLY</string>
</resources>