<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLighterBlack">

    <ImageButton
        android:id="@+id/profilePasswordCancelBtn"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/menuitem_background"
        android:onClick="profilePasswordCancelBtnClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/cancel4x" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/notoserif_regular"
        android:text="@string/PROFILE_CHANGE_PASSWORD_NAME"
        android:textColor="@color/colorDarkerWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profilePasswordCancelBtn" />

    <ImageButton
        android:id="@+id/profilePasswordDoneBtn"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/menuitem_background"
        android:onClick="profilePasswordDoneBtnClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/done4x" />

    <View
        android:id="@+id/divider12"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/profileChangePassCurrentPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/PROFILE_CHANGE_PASSWORD_NEW_PASS"
        android:inputType="textPersonName"
        android:textColor="@color/colorDarkerWhite"
        android:textColorHint="@color/colorGrey"
        android:backgroundTint="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider12" />

    <EditText
        android:id="@+id/profileChangePassNewPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/PROFILE_CHANGE_PASSWORD_REPEAT_PASS"
        android:inputType="textPersonName"
        android:textColor="@color/colorDarkerWhite"
        android:textColorHint="@color/colorGrey"
        android:backgroundTint="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="@+id/profileChangePassCurrentPass"
        app:layout_constraintStart_toStartOf="@+id/profileChangePassCurrentPass"
        app:layout_constraintTop_toBottomOf="@+id/profileChangePassCurrentPass" />
</androidx.constraintlayout.widget.ConstraintLayout>